<resources>
    <string name="app_name">Chatgenix</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_get_started">Let\'s get Started</string>
    <string name="phone">Phone</string>
    <string name="_91">+91-</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">VERIFY</string>
    <string name="add_emergency_contacts">Add Emergency Contacts</string>
    <string name="emergency_contact_1">Emergency Contact 1</string>
    <string name="emergency_contact_2">Emergency Contact 2</string>
    <string name="emergency_contact_5">Emergency Contact 5</string>
    <string name="emergency_contact_4">Emergency Contact 4</string>
    <string name="emergency_contact_3">Emergency Contact 3</string>
    <string name="update">UPDATE</string>
    <string name="back">BACK</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="desc_ardms">ARDMS Logo</string>
    <string name="desc_person">Person Image</string>

    <string name="error_no_internet">No internet connection</string>
    <string name="error_unexpected">Oops! Something went wrong!</string>
    <string name="error_empty">Cannot be empty</string>
    <string name="error_phone_length">Must be 10 digits</string>
    <string name="error_pass_length">Must be min 6 chars</string>

    <string name="hint_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_emergency_1">Emergency Contact 1</string>
    <string name="hint_emergency_2">Emergency Contact 2</string>
    <string name="hint_emergency_3">Emergency Contact 3</string>

    <string name="toggle_enable">Enable</string>
    <string name="toggle_disable">Disable</string>

    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>


    <string name="txt_detecting">Detecting..</string>
    <string name="txt_enable_detection">Enable Detection</string>
    <string name="txt_did_you_fall">Did you meet with an accident?</string>
    <string name="txt_sending_alert">Sending alert..</string>
    <string name="txt_alert_sent">Alert sent</string>

    <string name="format_alert0">An alert will be sent automatically in </string>
    <string name="format_alert2">, if not responded.</string>
    <string name="format_alert">%1$ds</string>

    <string name="click"><u>click here</u></string>
    <string name="about">Chatgenix is a Accident Detection And Safety Application for location Tracking Service and Emergency which works in Android platform. The main focus in this application is to protect and improve personal safety by letting user to get help in fastest and convenient way. Besides that, secure pin is used to make sure the identity and prevent anonymous or malicious attack. The aim is to develop an Android application that lets its users to send notifications in case of an emergency or a panic situation. The users can send multiple text messages on the press of a single button. The phone numbers, email ids and the contents of the text messages also have the last known location of the user can be set from within the application.</string>
    <string name="title_activity_pdf">PdfActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>